# platform

./: AGENTS.md  fix_nimble2.py  partitions_8mb_ota.csv  platformio.ini  replace_nimble.py
.agent/skills/feature-design-assistant/: SKILL.md
111/: analyze_rotation.py  realtime_simulator.py  visualize_imu_axes.py
111/data/: SpdCoach 3044811 20260127 0510AM.csv  gnss_028.csv  gnss_029.csv  gnss_032.csv  gnss_035.csv  gnss_036.csv  gnss_037.csv  gnss_038.csv  gnss_041.csv  gnss_042.csv  gnss_100.csv  gnss_101.csv  imu_log_010.csv  imu_log_011.csv  imu_log_012 (1).csv  imu_log_012.csv  imu_log_013.csv  imu_log_014 (1).csv  imu_log_014.csv  imu_log_015 (1).csv  imu_log_015.csv  imu_log_017.csv  imu_log_027.csv  imu_log_028 (1).csv  imu_log_028.csv  imu_log_029.csv  imu_log_030.csv  imu_log_031.csv  imu_log_032.csv  imu_log_035.csv  imu_log_036.csv  imu_log_037.csv  imu_log_038.csv  imu_log_041.csv  imu_log_042.csv  imu_log_044.csv  imu_log_045.csv  imu_log_061.csv  imu_log_063.csv  imu_log_092.csv  (+30 more)
111/lvgl-demo/: CMakeLists.txt  lv_conf.h  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h  main.c
111/lvgl-demo/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
111/lvgl-demo/ui/components/: ui_comp.h  ui_comp_button2.c  ui_comp_button3.c  ui_comp_button3.h
111/lvgl-demo/ui/fonts/: ui_font_Fon13.c  ui_font_Font22.c  ui_font_Font50.c
111/lvgl-demo/ui/screens/: ui_Screen2.c
111/stroke_sim_qt/: Arduino.h  CMakeLists.txt  ConfigManager.h  GNSSProcessor.cpp  GNSSProcessor.h  PlatformDefines.h  app_icon.rc  chart_view.cpp  chart_view.h  csv_loader.cpp  csv_loader.h  fix_file.ps1  installer.nsi  lvgl_widget.cpp  lvgl_widget.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  simulation_worker.cpp  simulation_worker.h  stroke_detector.cpp  stroke_detector.h  temp_onLoadGnss.cpp  training_mode.cpp  training_mode.h
111/stroke_sim_qt/qml/: MapView.qml
111/stroke_sim_qt/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h
111/stroke_sim_qt/ui/src/components/: ui_comp.c
111/stroke_sim_qt/ui/src/fonts/: ui_font_Font23.c
111/stroke_sim_qt/ui/src/images/: ui_img_2127489813.c  ui_img_798663736.c  ui_img_satellite2_png.c
111/stroke_sim_qt/ui/src/screens/: ui_Screen1.c
esp-fs-webserver-master/examples/customHTML/: customHTML.ino
esp-fs-webserver-master/examples/customOptions/: customOptions.ino
esp-fs-webserver-master/examples/gpio_list/: gpio_list.ino
esp-fs-webserver-master/examples/handleFormData/: handleFormData.ino
esp-fs-webserver-master/examples/remoteOTA/: remoteOTA.ino
esp-fs-webserver-master/examples/simpleServer/: simpleServer.ino
esp-fs-webserver-master/examples/withWebSocket/: withWebSocket.ino
lib/: lv_conf.h
lib/GFX_Library_for_Arduino/src/databus/: Arduino_ESP32LCD8.cpp  Arduino_ESP32QSPI.cpp
lib/GFX_Library_for_Arduino/src/display/: Arduino_DSI_Display.h
lib/NimBLE-Arduino/src/: NimBLEDevice.cpp  nimconfig.h
lib/ui/: CMakeLists.txt  filelist.txt  ui.c  ui_events.h  ui_helpers.c
lib/ui/components/: ui_comp_panel4.h
lib/ui/fonts/: ui_font_Font10.c  ui_font_Font17.c  ui_font_Font18.c  ui_font_Font24.c
lib/ui/images/: ui_img_jieli1_png.c
lib/ui/screens/: ui_Screen3.c  ui_Screen4.c
lib/ui/src/: ui.c  ui_helpers.h
lib/ui/src/components/: ui_comp_button2.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_panel4.c
lib/ui/src/fonts/: ui_font_Font20.c
lib/ui/src/images/: ui_img_ble1_png.c  ui_img_bluetooth_png.c  ui_img_clock1_png.c  ui_img_satellite_png.c  ui_img_stopwatch_png.c
lib/ui/src/screens/: ui_Screen1.c  ui_Screen4.c
src/: BluetoothManager.cpp  BluetoothManager.h  BrightnessManager.cpp  BrightnessManager.h  CellularManager.cpp  CellularManager.h  ConfigManager.cpp  ConfigManager.h  DataFlowManager.cpp  DataFlowManager.h  GNSSProcessor.cpp  GNSSProcessor.h  IMUManager.cpp  IMUManager.h  MQTTManager.cpp  MQTTManager.h  PowerManager.cpp  PowerManager.h  SDCardManager.cpp  SDCardManager.h  StrokeDataManager.cpp  StrokeDataManager.h  TrainingMode.cpp  TrainingMode.h  UIManager.cpp  UIManager.h  WifiTransferManager.cpp  WifiTransferManager.h  main.cpp
src1/: BluetoothManager.cpp  BluetoothManager.h  BrightnessManager.cpp  BrightnessManager.h  CellularManager.cpp  CellularManager.h  ConfigManager.cpp  ConfigManager.h  DataFlowManager.cpp  DataFlowManager.h  FirmwareVersion.h  GNSSProcessor.cpp  GNSSProcessor.h  IMUManager.cpp  IMUManager.h  MQTTManager.cpp  MQTTManager.h  PowerManager.cpp  PowerManager.h  SDCardManager.cpp  SDCardManager.h  StrokeDataManager.cpp  StrokeDataManager.h  TrainingMode.cpp  TrainingMode.h  UIManager.cpp  UIManager.h  WifiTransferManager.cpp  WifiTransferManager.h  main.cpp
utils/ble_scanner_pio/: platformio.ini
utils/ble_scanner_pio/src/: main.cpp
utils/hr_ble_simulator_pio/: platformio.ini
utils/hr_ble_simulator_pio/src/: main.cpp
